--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "jest",
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch dist --exec \"node dist/bundle.dev.js\"",
-    "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch"
+    "dev:build-server": "webpack --config webpack/webpack.server.js --watch",
+    "dev:build-client": "webpack --config webpack/webpack.client.js --watch"
   },
   "author": "Victor Quiroz Castro <victorhqc@gmail.com>",
   "license": "MIT",
@@ -28,7 +28,6 @@
     "compression": "^1.7.1",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
-    "express-http-proxy": "^1.1.0",
     "lodash": "^4.17.4",
     "nodemon": "^1.12.5",
     "npm-run-all": "^4.1.2",
@@ -36,12 +35,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.6",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "serialize-javascript": "^1.4.0",
     "styled-components": "^2.2.4",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
