--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch dist --exec \"node dist/bundle.dev.js\"",
     "dev:build-server": "webpack --config webpack/webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack/webpack.client.js --watch"
+    "dev:build-client": "webpack --config webpack/webpack.client.js --watch",
+    "build": "NODE_ENV=production npm-run-all --parallel build:*",
+    "build:server": "webpack --config webpack/webpack.server.js",
+    "build:client": "webpack --config webpack/webpack.client.js",
+    "start": "nodemon dist --exec \"node dist/bundle.js\""
   },
   "author": "Victor Quiroz Castro <victorhqc@gmail.com>",
   "license": "MIT",
@@ -46,7 +50,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "webpack": "^3.10.0",
+    "webpack-auto-inject-version": "^1.0.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
