Improve webpack. Based on `create-react-app` configuration.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "compression": "^1.7.1",
     "concurrently": "^3.5.1",
+    "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "nodemon": "^1.12.5",
@@ -52,8 +53,11 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "file-loader": "^1.1.6",
     "lodash-webpack-plugin": "^0.11.4",
+    "react-dev-utils": "^4.2.1",
     "uglifyjs-webpack-plugin": "^1.1.4",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-auto-inject-version": "^1.0.0",
     "webpack-dev-server": "^2.9.7",
